src/objects/inscor__RO_Issue__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Restocked__c</fullName>
        <label>Date Restocked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>RO Issues</relationshipLabel>
        <relationshipName>RO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RO Issues</relationshipLabel>
        <relationshipName>RO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Issued__c</fullName>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Not_Issued__c</fullName>
        <formula>inscor__Quantity_to_Issue__c -  inscor__Quantity_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Not Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Restocked__c</fullName>
        <label>Quantity Restocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_to_Issue__c</fullName>
        <label>Quantity to Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_to_Restock__c</fullName>
        <formula>inscor__Quantity_to_Issue__c -  inscor__Quantity_Issued__c -  inscor__Quantity_Restocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity to Restock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>RO Issues</relationshipLabel>
        <relationshipName>RO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>RO Issues</relationshipLabel>
        <relationshipName>RO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>RO Issues</relationshipLabel>
        <relationshipName>RO_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>In Picking</fullName>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
                <value>
                    <fullName>In QC</fullName>
                </value>
                <value>
                    <fullName>QCd</fullName>
                </value>
                <value>
                    <fullName>In Shipping</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Restocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RO Issue</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Repair_Order__c</columns>
        <columns>inscor__Repair_Order_Line__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Quantity_to_Issue__c</columns>
        <columns>inscor__Quantity_to_Restock__c</columns>
        <columns>inscor__Quantity_Issued__c</columns>
        <columns>inscor__Date_Issued__c</columns>
        <columns>inscor__Quantity_Restocked__c</columns>
        <columns>inscor__Date_Restocked__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>inscor__Inventory_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROI-{0}</displayFormat>
        <label>RO Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RO Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Quantity_Issued_and_Quantity_to_Issue</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Quantity_to_Issue__c &lt;   inscor__Quantity_Issued__c</errorConditionFormula>
        <errorMessage>Quantity to Issue should not be less then Quantity Issued</errorMessage>
    </validationRules>
</CustomObject>